src/features/multivariate_layer/components/CustomStepsInput/CustomStepsInput.module.css
.customStepsRow {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  gap: var(--unit);
  align-items: center;
  margin-top: var(--unit);
}

.customStepsRowName {
  width: 100px;
}

.customStepInput {
  width: 100px;
}

.error {
  color: var(--error-strong);
}

@media screen and (max-width: 960px) {
  .customStepsRowName {
    width: 75px;
  }

  .customStepInput {
    width: 75px;
  }
}

